--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <title>SuperIdea</title>
+  <title>ScholarShareNet</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
